# license-hmac

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: hmaclic.h  hmaclic.in  licutils.h  sha256.h
src/: generateLicense.c  generateLicense.cpp  getMachineID.c  getMachineID.cpp  hmaclic.c  licutils.cpp  sha256.c  validateLicense.c  validateLicense.cpp
